--- a/WebQuanLiCuaHangBanOto/WebQuanLiCuaHangBanOto.csproj
+++ b/WebQuanLiCuaHangBanOto/WebQuanLiCuaHangBanOto.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\SanPhamController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="efpt.config.json.user" />
   </ItemGroup>
 
@@ -18,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Views\SanPham\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
