--- a/WebQuanLiCuaHangBanOto/WebQuanLiCuaHangBanOto.csproj
+++ b/WebQuanLiCuaHangBanOto/WebQuanLiCuaHangBanOto.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -21,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\SanPham\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
