xua phan loging

--- a/WebQuanLiCuaHangBanOto/appsettings.json
+++ b/WebQuanLiCuaHangBanOto/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-73Q6JO8;Database=QLCHOTO;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-
+  "EmailSettings": {
+    "FromEmail": "bestluluthegio@gmail.com",
+    "AppPassword": "ntmivlbuhzwsfkxb"
+  },
   "AllowedHosts": "*"
 }
